# agri_eye_ros1

./: .gitignore  README.md
agri_eye_msgs/: CMakeLists.txt  package.xml
agri_eye_msgs/msg/: EstimatedPose2D.msg  EstimatedPose2DArray.msg  EstimatedPose3D.msg  EstimatedPose3DArray.msg  ExtendedNamedPoseArray.msg
feature_tracker/src/: feature_tracker_node.cpp
local_sensing/: CMakeLists.txt  package.xml
local_sensing/launch/: detect_flower.launch  realsense.launch  realsense.xml  sync.launch  vins_cf.launch  vins_cf_eval.launch  vins_estimate.launch  vins_euroc_eval.launch  vtx_demo.launch
local_sensing/rviz/: feature_tracking.rviz  vins_rviz_config.rviz
local_sensing/scripts/: sync_viz.py
local_sensing/src/: local_sensing.cpp
motion_capture_tracking_msgs/: CMakeLists.txt  package.xml
motion_capture_tracking_msgs/msg/: ExtendedNamedPose.msg
pose_estimator/: CMakeLists.txt  package.xml  pyproject.toml
pose_estimator/include/: estimate_manager.h
pose_estimator/launch/: detect.launch  realsense.launch  realsense.xml  test.launch  webcam.launch
pose_estimator/scripts/: flower_detector.py  flower_detector_dev.py  flower_pose_estimator.py  gen_onnx.py  gen_torch2trt.py  image_talker.py  model.py  module.py  module_trt.py  test_draw.py  utils.py
pose_estimator/scripts/backbone/: repvgg.py
pose_estimator/scripts/datasets/coco8/labels/: val.cache
pose_estimator/scripts/legacy/: fake_flower_pose.py  flower_pose_estimator.py
pose_estimator/scripts/trt_tools/: gen_sixedrepnet_onnx.py  gen_yolo_engine.py  test_sixedrepnet_onnx.py
pose_estimator/src/: estimate_manager.cpp  fake_estimator.cpp  pose_estimator_node.cpp  webcam.cpp
pose_graph/: CMakeLists.txt
pose_graph/src/: pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
vins_estimator/launch/: cf.launch
vins_estimator/src/: estimator.cpp  estimator_node.cpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp
vins_estimator/src/utility/: visualization.cpp
